fixed textarea issue and resized send button font

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 </td>
 </tr>
 
+</tbody>
+</table>
+
+<table border="0" width="700">
+<tbody>
 
 <tr>
 <td>
@@ -88,6 +93,7 @@
 <br><br>
 <input name=ccme type=checkbox checked> Send me a copy of this message<p>
 <textarea placeholder="Message" name="body" rows="10" cols="100"></textarea>
+<br>
 <input type="submit" value="SEND" />
 
 <script>
