added linkedin link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </tbody>
 </table>
 
-<hr>
+<!-- <hr> -->
 
 <table border="0" width="700">
 <tbody>
@@ -38,6 +38,7 @@
 <td width="690">
 
 <p><a href="https://github.com/cvwang/">Github</a></p>
+<p><a href="https://www.linkedin.com/in/cvwang">LinkedIn</a></p>
 <p><a href="res/resume.pdf">Resume</a></p>
 
 <p><strong>UROP Research</strong></p>
