--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
 <p><strong>Projects</strong></p>
 <ul>
+<li>Tech Team Director at <a href="https://mpowered.umich.edu/">MPowered Entrepreneurship</a> - Overseeing development of our organization's first <a href="https://play.google.com/store/apps/details?id=edu.umich.mpowered.mpowered">Android</a> and <a href="https://itunes.apple.com/us/app/mpowered-entrepreneurship/id1039674962">iOS</a> apps.</li>
 <li>Built an <a href="cube.html">8x8x8 LED Cube</a> and programmed an FPGA board in assembly to graph two-variable functions (team of four).
 <li>Built an <a href="http://www.youtube.com/watch?v=CIx559oaiVE">automated vinyl record cleaner</a> for my senior project (team of two).
 <li>For my Stanford summer engineering design course, I built a <a href="http://www.youtube.com/watch?v=28SGvFchyhs">portable MP3 player</a> (individual).
@@ -76,7 +77,7 @@
 </tbody>
 </table>
 
-<a href="personal_website2/index.html">New Website</a>
+<a href="personal_website2/index.html">New Website (In Prod.)</a>
 
 <hr>
 
