remove 2nd site

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 <p><strong>Projects</strong></p>
 <ul>
-<li>Tech Team Director at <a href="https://mpowered.umich.edu/">MPowered Entrepreneurship</a> - Overseeing development of our organization's first <a href="https://play.google.com/store/apps/details?id=edu.umich.mpowered.mpowered">Android</a> and <a href="https://itunes.apple.com/us/app/mpowered-entrepreneurship/id1039674962">iOS</a> apps.</li>
 <li> Twerating - Implemented Machine Learning techniques to tackle the sentiment analysis problem. Our team developed a movie rating system that pools and processes Twitter tweets to provide a truely accurate and unbiased movie rating. <a href="res/ml_paper.pdf">Paper</a> and <a href="res/ml_poster.pdf">poster</a>.
+<li>Tech Team Director at <a href="https://mpowered.umich.edu/">MPowered Entrepreneurship</a> - Overseeing development of our organization's first <a href="https://play.google.com/store/apps/details?id=edu.umich.mpowered.mpowered">Android</a> and <a href="https://itunes.apple.com/us/app/mpowered-entrepreneurship/id1039674962">iOS</a> apps.</li>
 <li>Built an <a href="cube.html">8x8x8 LED Cube</a> and programmed an FPGA board in assembly to graph two-variable functions (team of four).
 <li>Built an <a href="http://www.youtube.com/watch?v=CIx559oaiVE">automated vinyl record cleaner</a> for my senior project (team of two).
 <li>For my Stanford summer engineering design course, I built a <a href="http://www.youtube.com/watch?v=28SGvFchyhs">portable MP3 player</a> (individual).
@@ -78,7 +78,7 @@
 </tbody>
 </table>
 
-<a href="personal_website2/index.html">New Website (In Prod.)</a>
+<!-- <a href="personal_website2/index.html">New Website (In Prod.)</a> -->
 
 <hr>
 
