--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <p><strong>Projects</strong></p>
 <ul>
-<li> Twerating - Implemented Machine Learning techniques to tackle the sentiment analysis problem. Our team developed a movie rating system that pools and processes Twitter tweets to provide a truely accurate and unbiased movie rating. <a href="res/ml_paper.pdf">Paper</a> and <a href="res/ml_poster.pdf">poster</a>.
+<li> Twerating - Implemented Machine Learning techniques to tackle the sentiment analysis problem. Our team developed a movie rating system that pools and processes Twitter tweets to provide a truly accurate and unbiased movie rating. <a href="res/ml_paper.pdf">Paper</a> and <a href="res/ml_poster.pdf">poster</a>.
 <li>Tech Team Director at <a href="https://mpowered.umich.edu/">MPowered Entrepreneurship</a> - Overseeing development of our organization's first <a href="https://play.google.com/store/apps/details?id=edu.umich.mpowered.mpowered">Android</a> and <a href="https://itunes.apple.com/us/app/mpowered-entrepreneurship/id1039674962">iOS</a> apps.</li>
 <li>Built an <a href="cube.html">8x8x8 LED Cube</a> and programmed an FPGA board in assembly to graph two-variable functions (team of four).
 <li>Built an <a href="http://www.youtube.com/watch?v=CIx559oaiVE">automated vinyl record cleaner</a> for my senior project (team of two).
