lower res photo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <tbody>
           <tr>
             <td>
-              <div style="height: 250px"><img src="res/pro_pic.JPG" style="height:100%"></div>
+              <div style="height: 250px"><img src="res/pro_pic.jpg" style="height:100%"></div>
             </td>
             <td>
               <p><font size="7">Charles Wang</font></p>
